--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="estilos.css">
-    <title>Clase Github</title>
+    <title>DecopalletRv</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <h1>DecopalletRv</h1>
+    <img src="img/space.jpg" alt="pallet" height="auto" width="100%">
 </body>
 </html>
