--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>DecopalletRv</h1>
     <img src="img/space.jpg" alt="pallet" height="auto" width="100%">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, inventore. Fugit vero nostrum accusamus, exercitationem, quidem, velit explicabo repudiandae dignissimos voluptas non placeat commodi recusandae distinctio quo! Harum, consequuntur quo?</p>
 </body>
 </html>
