--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>DecopalletRv</h1>
+    <h2>lo mejor</h2>
     <img src="img/space.jpg" alt="pallet" height="auto" width="100%">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, inventore. Fugit vero nostrum accusamus, exercitationem, quidem, velit explicabo repudiandae dignissimos voluptas non placeat commodi recusandae distinctio quo! Harum, consequuntur quo?</p>
 </body>
